<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_imprimir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.salgado.jorge.keymanky.procesodeventa.Imprimir">

    <TextView
        android:id="@+id/textViewPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/buttonOpenFromDeviceStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewPath"
        android:layout_centerHorizontal="true"
        android:text="@string/open_from_device_storage"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOpenPrinter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/number_0"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/number_100"
        android:visibility="invisible" />

    <SeekBar
        android:id="@+id/seekBarBrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView3"
        android:max="100"
        android:progress="50"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBarBrightness"
        android:layout_centerHorizontal="true"
        android:text="@string/brightness"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/number_50"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroupOpen"
        android:layout_centerHorizontal="true"
        android:text="@string/open_from"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonOpenPrinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/open_printer"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonClosePrinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_printer"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print"
        android:layout_alignTop="@+id/buttonOpenPrinter"
        android:layout_alignEnd="@+id/textView1"
        android:editable="false"
        android:enabled="false" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paired_devices"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/listViewPairedDevices"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <RadioGroup
        android:id="@+id/radioGroupOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listViewPairedDevices"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/radioProjectResources"
            android:layout_width="wrap_content"
            android:layout_height="6dp"
            android:text="@string/project_resources"
            android:visibility="invisible" />
    </RadioGroup>

    <RadioButton
        android:id="@+id/radioDeviceStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/device_storage"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/wb_imprimir"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/response"
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin"
        android:layout_below="@+id/radioGroupOpen"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp" />

    <WebView
        android:id="@+id/wb_imprimir"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/response"
        android:layout_height="match_parent" />

</RelativeLayout>
